# BLiPS

./: .gitignore  ALGORITHM_COMPARISON_README.md  App.tsx  CHANGELOG.md  CONTRIBUTING.md  ENHANCED_SIMULATION.md  LICENSE  README.md  TODO.md  aprs-proxy.cjs  constants.ts  eslint.config.js  index.html  metadata.json  package-lock.json  package.json  project.yml  release-notes.md  types.ts  vite.config.ts
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  performance.md  question.md
.github/workflows/: ci.yml  tauri-release.yml
components/: AltitudeChart.tsx  CalculationDetailsModal.tsx  CalculatorTab.tsx  GlobeVisualization.tsx  Header.tsx  ImprovedMapSelector.tsx  LeafletVisualization.test.tsx  LeafletVisualization.tsx  LiabilityModal.tsx  LivePredictionPanel.tsx  MissionPlanner.tsx  SafetyInfo.tsx  TabbedInterface.tsx  ThreeDVisualization.tsx  Visualization.tsx
components/icons/: IconComponents.tsx
hooks/: usePrediction.ts
services/: dummyFlightSimulator.ts  liveAnalysisService.ts  predictionService.ts  weatherService.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: LaunchScreen.storyboard
src-tauri/src/: lib.rs
src/components/: AlgorithmComparisonPanel.tsx  AltitudeChart.tsx  CalculationDetailsModal.tsx  CalculatorTab.tsx  EnhancedSimulationPanel.tsx  ErrorBoundary.tsx  GlobeVisualization.tsx  Header.tsx  ImprovedMapSelector.tsx  LandingPredictionMap.tsx  LeafletVisualization.test.tsx  LeafletVisualization.tsx  (+8 more)
(+13 files in other folders)
